[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="BeginGameButton" type="Button" parent="."]
anchor_right = 0.029
anchor_bottom = 0.06
margin_left = 443.346
margin_top = 333.019
margin_right = 533.65
margin_bottom = 347.019
text = "Ready!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLabel" type="Label" parent="."]
margin_left = 700.083
margin_top = 5.03324
margin_right = 1018.08
margin_bottom = 134.033
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 3.0
[connection signal="pressed" from="BeginGameButton" to="." method="_on_BeginGameButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
